...
      controller: _limitController,
      callback: () => addLimitAction(),
      fieldIcon: Icons.update_outlined,
      hintText: "Set Monthly Limit",
      buttonText: "set",
      textInputType: TextInputType.number,
      fieldKey: Key("addLimitField"),
      actionButtonKey: Key("addLimitButton"),
    );
  }

  String findUpdatedCategory(
      {@required List<String> categoriesRef, @required String categoryRef}) {
    List<String> categories = categoriesRef;
...
                                                    primary: true,
                                                    scrollDirection:
                                                        Axis.vertical,
                                                    shrinkWrap: true,
                                                    physics:
                                                        BouncingScrollPhysics(),
                                                    key: Key("categoriesList"),
                                                    padding: EdgeInsets.only(
                                                        bottom: _height * 0.1),
                                                    mainAxisSpacing: 5.0,
                                                    crossAxisSpacing: 5.0,
                                                    itemCount: docsLenght,
                                                    crossAxisCount: 4,
...
                                                  ),
                                                  onPressed: () {
                                                    Get.to(() => Account());
                                                  }),
                                              IconButton(
                                                key: const Key(
                                                    "menuCategoryButton"),
                                                icon: Icon(
                                                  Icons.add,
                                                  size: 30.0,
                                                  color: colors.blueColor,
                                                ),
                                                onPressed: () async {
...
      mainAxisAlignment: MainAxisAlignment.spaceAround,
      crossAxisAlignment: CrossAxisAlignment.center,
      children: [
        _widgets.text(
            val: "set monthly limit ", color: colors.greyColor, fontsize: 16.0),
        RaisedButton(
          key: Key("menuSetLimit"),
          elevation: 5.0,
          color: colors.greyColor,
          onPressed: () => addLimitsnacbar(),
          child: _widgets.text(
            color: colors.pinkColor,
            fontsize: 16.0,
...
