...
                                  controller: _emailController,
                                  iconColor: _greyColor,
                                  labelColor: _greyColor,
                                  hint: "email",
                                  borderColor: _greyColor,
                                  icon: Icons.email,
                                  key: Key("loginEmailField"),
                                ),
                                Padding(padding: EdgeInsets.all(4.0)),
                                _widgets.passwordTextfeild(
                                  lableColor: colors.greyColor,
                                  callback: () {
                                    api.virePassword();
                                  },
                                  action: TextInputAction.done,
                                  key: Key("loginPassFeild"),
                                  borderColor: _greyColor,
                                  controller: _passwordController,
                                  iconColor: _greyColor,
                                  hint: "password",
                                  icon: api.isPassword
                                      ? Icons.visibility_outlined
...
                              mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                              children: [
                                Container(
                                  width: _width * 0.9,
                                  height: _height * 0.05,
                                  child: RaisedButton(
                                    key: Key("loginButton"),
                                    color: colors.greyColor,
                                    onPressed: () async {
                                      String responce =
                                          await _firebaseAuthservice
                                              .firebaseLogin(
                                                  email: _emailController.text
...
