...
                          ),
                          Column(
                            children: [
                              Container(
                                width: _width * 0.9,
                                child: RaisedButton(
                                  key: Key("wrapperLoginButton"),
                                  onPressed: () {
                                    Get.to(() => Login());
                                  },
                                  color: colors.greyColor,
                                  child: Text("Login"),
                                ),
...
